--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             </svg>
         </button>
 
+        <div id="time-display-container">
+            <div id="day-display">1日目</div>
+            <div id="clock-display">10:00</div>
+        </div>
+
         <!-- ショップボタン -->
         <button id="shop-button">
             <img src="images/shop-icon.png" alt="ショップ">
@@ -177,6 +182,26 @@
                 </div>
             </div>
         </div>
+
+        <div id="day-start-overlay" class="modal-overlay" style="display:none; background-color: rgba(0,0,0,1); z-index: 6000;">
+            <div id="day-start-text">1日目 スタート</div>
+        </div>
+
+        <div id="daily-result-modal" class="modal-overlay" style="z-index: 5500;">
+            <div class="game-panel" style="width: 600px; text-align: center;">
+                <h2>今日の営業終了！</h2>
+                <div class="daily-result-content">
+                    <div class="result-row"><span>売上:</span> <span id="result-revenue">0</span>円</div>
+                    <div class="result-row"><span>けいひ:</span> <span id="result-expenses">0</span>円</div>
+                    <hr style="border: 2px dashed var(--dark-brown); margin: 10px 0;">
+                    <div class="result-row large"><span>収支:</span> <span id="result-profit">0</span>円</div>
+                    <div class="result-row"><span>お客さん:</span> <span id="result-customers">0</span>人</div>
+                    <div class="result-row"><span>合計得点:</span> <span id="result-score">0</span>点</div>
+                </div>
+                <button id="next-day-button" class="action-button-style" style="margin-top: 20px; background-color: var(--main-blue);">次の日へ</button>
+            </div>
+        </div>
+
     </div>
 
     <script src="data.js"></script>
