--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             </div>
         </div>
 
-        <!-- ★新規追加: ハングリー×アングリー解放通知モーダル -->
+        <!-- ★リズム・バーガータワー解放通知モーダル (修正) -->
         <div id="contest-hungry-unlock-modal" class="modal-overlay" style="z-index: 7500;">
             <div class="game-panel" style="width: 700px; text-align: center; border: 10px solid var(--main-red); padding: 40px; background-color: #fff0f0;">
                 <h2 style="color: var(--main-red); font-size: 3em; margin: 0 0 20px; text-shadow: 3px 3px 0 var(--dark-brown);">新コンテスト解放！</h2>
-                <img src="images/contest-hungry-icon.png" alt="ハングリーアングリー" style="width: 250px; height: auto; object-fit: contain; margin-bottom: 20px; filter: drop-shadow(0 5px 10px rgba(0,0,0,0.2));">
+                <img src="images/contest-hungry-icon.png" alt="リズム・バーガータワー" style="width: 250px; height: auto; object-fit: contain; margin-bottom: 20px; filter: drop-shadow(0 5px 10px rgba(0,0,0,0.2));">
                 <p style="font-size: 1.8em; font-weight: 800; line-height: 1.4; color: var(--dark-brown); margin: 10px 0;">
-                    「ハングリー×アングリー」<br>コンテストに参加できます！
+                    「リズム・バーガータワー」<br>コンテストに参加できます！
                 </p>
                 <p style="font-size: 1.3em; color: #555; margin-bottom: 30px;">
                     コンテスト画面の <span style="display:inline-block; vertical-align:middle; background:var(--main-yellow); border:2px solid var(--dark-brown); border-radius:50%; padding:2px; font-weight:bold; width:30px; height:30px; line-height:24px;">▶</span> ボタンで切り替えてね！
